@@ -456,7 +456,7 @@
 </table>
 
 <p>
-  The 2tth release of NuttX (nuttx-0.3.13) is available for download
+  The 25th release of NuttX (nuttx-0.3.13) is available for download
   from the <a href="http://sourceforge.net/project/showfiles.php?group_id=189573">SourceForge</a>
   website.
   The change log associated with the release is available <a href="#currentrelease">here</a>.
@@ -1067,6 +1067,7 @@ nuttx-0.3.14 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* fseek() needs to discard bytes buffered by ungetc().
 	* Corrected ftell() return value.
 	* Added fsetpos() and fgetpos().
+	* NSH now supports 'test' and '[' commands
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
